--- a/API/API.csproj
+++ b/API/API.csproj
@@ -6,5 +6,7 @@
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.8"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8"/>
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.3"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.8"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8"/>
   </ItemGroup>
 </Project>
